--- a/example-react-app.csproj
+++ b/example-react-app.csproj
@@ -20,6 +20,17 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ui\src\Action.ts" />
+    <None Remove="ui\src\App.js" />
+    <None Remove="ui\src\actions\currency.ts" />
+    <None Remove="ui\src\models\CurrencyData.ts" />
+    <None Remove="ui\src\reducers\Currency.ts" />
+    <None Remove="ui\ExchangeRatesContainer.ts" />
+    <None Remove="ui\src\ExchangeRatesContainer.cs" />
+    <None Remove="ui\src\ExchangeRatesContainer.ts" />
+    <None Remove="ui\src\ExchangeRatesContainer.js" />
+  </ItemGroup>
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
@@ -28,7 +39,7 @@
     <!-- Include the newly-built files in the publish output -->
     <ItemGroup>
       <DistFiles Include="$(SpaRoot)build\**" />
-      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
+      <ResolvedFileToPublish Include="@(DistFiles-&gt;'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
         <RelativePath>%(DistFiles.Identity)</RelativePath>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </ResolvedFileToPublish>
