--- a/example-react-app.csproj
+++ b/example-react-app.csproj
@@ -30,6 +30,7 @@
     <None Remove="ui\src\ExchangeRatesContainer.cs" />
     <None Remove="ui\src\ExchangeRatesContainer.ts" />
     <None Remove="ui\src\ExchangeRatesContainer.js" />
+    <None Remove="ui\src\models\CurrencyData.ts" />
   </ItemGroup>
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
